--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 
-    <title>Spotify - web Player: Music for everyone</title>
+    <title>Spotifyy - web Player: Music for everyone</title>
 
     <link rel="stylesheet" href="style.css">
 </head>
